--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 
 .jumbotron {
-    background-image: url(/Users/lauraoberwetter/Desktop/background.png);
+    background-image: url(assets/background.png);
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -40,7 +40,7 @@ a {
 
 #About {
     background: var(--orange);
-    background: radial-gradient(circle, rgba(255,132,83,1) 0%, rgba(255,239,242,1) 70%);
+    background: radial-gradient(circle, rgba(255,132,83,1) 0%, rgba(255,239,242,1) 60%);
     font-family: 'Texturina', serif;
     text-align: center;
     padding-top: 10%;
@@ -81,7 +81,7 @@ p {
 
 #work {
     background: var(--yellow);
-    background: radial-gradient(circle, rgba(233,237,10,1) 0%, rgba(255,239,242,1) 70%);
+    background: radial-gradient(circle, rgba(233,237,10,1) 0%, rgba(255,239,242,1) 75%);
     font-family: 'Texturina', serif;
     text-align: center;
     padding-top: 10%;
@@ -90,7 +90,7 @@ p {
 
 #contact {
     background: rgb(198,192,243);
-    background: radial-gradient(circle, rgba(198,192,243,1) 0%, rgba(255,239,242,1) 70%);
+    background: radial-gradient(circle, rgba(198,192,243,1) 0%, rgba(255,239,242,1) 60%);
     font-family: 'Texturina', serif;
     text-align: center;
     padding-top: 10%;
