--- a/style.css
+++ b/style.css
@@ -14,10 +14,6 @@
     height: 100vh;
     padding-top: 15%;
     background-position: center;
-    /* look into object fit for working with actual <img> */
-    /* background-position helpful for making background img more responsive (set to center)*/
-    /* background-attachment: ; */
-
    }
 
 .name {
@@ -77,7 +73,9 @@ p {
     color: var(--orange);
 }
 
-
+.col-sm-4 {
+    width: 20em;
+}
 
 #work {
     background: var(--yellow);
@@ -95,4 +93,25 @@ p {
     text-align: center;
     padding-top: 10%;
     padding-bottom: 10%;
+}
+
+@media only screen and (max-width: 700px) {
+    .name {
+        font-family: 'Texturina', serif;    
+        color: var(--blue);
+        font-size: 4em;
+    } 
+    .jumbotron {
+        background-image: url('assets/background.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100vh;
+        padding-top: 40%;
+        background-position: center;
+       }
+       a {
+        color: var(--orange)!important;
+        font-family: 'Eurostile Extended', sans-serif;
+        font-size: 1em;  
+    }
 }
